--- a/login.html
+++ b/login.html
@@ -125,7 +125,7 @@ form.addEventListener("submit",function (event){
       flag=true;
       localStorage.setItem("Login",JSON.stringify(elem));
       alert("Login Successfull");
-      window.location.href="https://www.masaischool.com/courses/full-stack-web-dev-full-time/#eligibility."
+      window.location.href="homePage.html"
     }
    
  
