added prod divs

--- a/homePage.html
+++ b/homePage.html
@@ -46,6 +46,105 @@
             <button id="btn8"><h3>Paneer</h3><p>Store</p></button>    
         </div>
     </div>
+
+    <div id="prod">
+       
+        <div id="prod1">
+            <div class="off"><p> Get 40% Off</p></div>
+            <img src="https://www.bigbasket.com/media/uploads/p/s/10000069_20-fresho-capsicum-green.jpg">
+            <p>Fresho</p>
+            <h5>Capsicum- Green (loose)</h5>
+            <div class="price">
+                <select name="price" id="select">
+                    <option value="1kg">1kg <span>Rs - 20
+                    </span></option>
+                    <option value="0.5kg">0.5kg <span>Rs - 10
+                    </span></option>
+
+                </select>
+                <div id="qty"></div>
+                <label for="qty">Qty</label>
+                <input type="text" name="" id="qtyin">
+                <button>Add<i class="fa-solid fa-basket-shopping"></i></button>
+            </div>
+        </div>
+        <div id="prod1">
+            <div class="off"><p> Get 40% Off</p></div>
+            <img src="https://www.bigbasket.com/media/uploads/p/s/10000072_16-fresho-carrot-orange.jpg">
+            <p>Fresho</p>
+            <h5>Carrot</h5>
+            <div class="price">
+                <select name="price" id="select">
+                    <option value="1kg">1kg <span>Rs - 20
+                    </span></option>
+                    <option value="0.5kg">0.5kg <span>Rs - 10
+                    </span></option>
+
+                </select>
+                <div id="qty"></div>
+                <label for="qty">Qty</label>
+                <input type="text" name="" id="qtyin">
+                <button>Add<i class="fa-solid fa-basket-shopping"></i></button>
+            </div>
+        </div>
+        <div id="prod1">
+            <div class="off"><p> Get 30% Off</p></div>
+            <img src="https://www.bigbasket.com/media/uploads/p/s/10000074_19-fresho-cauliflower.jpg">
+            <p>Fresho</p>
+            <h5>Cauliflower</h5>
+            <div class="price">
+                <select name="price" id="select">
+                    <option value="1kg">1kg <span>Rs - 20
+                    </span></option>
+                    <option value="0.5kg">0.5kg <span>Rs - 10
+                    </span></option>
+
+                </select>
+                <div id="qty"></div>
+                <label for="qty">Qty</label>
+                <input type="text" name="" id="qtyin">
+                <button>Add<i class="fa-solid fa-basket-shopping"></i></button>
+            </div>
+        </div>
+        <div id="prod1">
+            <div class="off"><p> Get 20% Off</p></div>
+            <img src="https://www.bigbasket.com/media/uploads/p/s/10000097_19-fresho-coriander-leaves.jpg">
+            <p>Fresho</p>
+            <h5>Parsley</h5>
+            <div class="price">
+                <select name="price" id="select">
+                    <option value="1kg">1kg <span>Rs - 20
+                    </span></option>
+                    <option value="0.5kg">0.5kg <span>Rs - 10
+                    </span></option>
+
+                </select>
+                <div id="qty"></div>
+                <label for="qty">Qty</label>
+                <input type="text" name="" id="qtyin">
+                <button>Add<i class="fa-solid fa-basket-shopping"></i></button>
+            </div>
+        </div>
+        <div id="prod1">
+            <div class="off"><p> Get 20% Off</p></div>
+            <img src="https://www.bigbasket.com/media/uploads/p/s/10000103_16-fresho-cucumber.jpg">
+            <p>Fresho</p>
+            <h5>Capsicum- Green (loose)</h5>
+            <div class="price">
+                <select name="price" id="select">
+                    <option value="1kg">1kg <span>Rs - 20
+                    </span></option>
+                    <option value="0.5kg">0.5kg <span>Rs - 10
+                    </span></option>
+
+                </select>
+                <div id="qty"></div>
+                <label for="qty">Qty</label>
+                <input type="text" name="" id="qtyin">
+                <button>Add<i class="fa-solid fa-basket-shopping"></i></button>
+            </div>
+        </div>
+    </div>
     <div id="bank">
         <h1>Bank Offers</h1>
         <hr>
@@ -141,6 +240,7 @@
         <button id="rightbtn">></button>
     </div>
 
+    
 </body>
 </html>
 <script>
