--- a/homePage.html
+++ b/homePage.html
@@ -240,6 +240,63 @@
         <button id="rightbtn">></button>
     </div>
 
+    <div id="company-info" >
+        <ul>OUR POLICIES
+        <li>Covid-19 Precautions</li>
+        <li>Our Promise</li>
+        <li>Terms&Conditions</li>
+        <li>Customs tariffs and fees</li>
+        <li>Privacy Polic</li>
+    </ul>
+    <ul>CORPORATE
+        <li>Sell With Us</li>
+        <li>Career Opportunities</li>
+        <li>Our Blog</li>
+        <li>Site Map</li>
+    </ul>
+    <ul>HELP
+        <li>How MeanBuy Works</li>
+        <li>My Orders</li>
+        <li>Exchange,Returns and Refunds</li>
+        <li>Contact Us</li>
+        <li>FAQ</li>
+    </ul>
+    <ul >STATES COVERED
+        <li>Tamil nadu</li>
+        <li>Karnataka</li>  
+         <li>Maharastra</li>
+        <li>Kerala</li>
+        <li>West bengal</li>
+        <li>Telangana</li>
+        <li>Andhra pradesh</li>
+    </ul>
+    <ul>SELL WITH US
+        <li>General Information</li>
+        <li>Signup</li>
+    </ul>
+    <form>
+        <input type="text"  id="Email"  placeholder="Your Email Address">
+        <submit id="subs" >Subscribe</submit>
+    </form>
+       </div>
+       <hr>
+       <div id="more">
+        <h6>BigBasket Is Your One Stop Destination For Online Shopping </h6>
+       <p> BigBasket is a comprehensive platform for you to choose how you shop, whether it is buying instantly, waiting to save or to pick up your order from the store after freezing it.<br>
+Everyone will agree that it is not easy to go down to the market in massive traffic, driving through crowds, all striving for the same trendy clothing, expecting in line to try on the picked up items in the trial rooms, and finally deciding on the product you buy.<br>
+ Some people like to personally analyze the product before purchasing it in the store. Although some people do not like to shop online, others beg to differ by using the internet to do things. For all you internet enthusiasts who like online shopping,</p>
+
+<h6>Get The Best Of Your Online Shopping Experience</h6>
+<p>Keeping mind the fact that everything is just a tap away in today's world, fashion and clothing have no escape from the cyberspace. Online shopping is made easier with various categories and filters that let you get the best result of what you're looking for.<br>
+ At BigBasket.com we specialize in categorizing the required fields as per your convenience to provide you the best online shopping experience. Categories like Online shopping for <br>
+ kids, online shopping for men, online shopping for women, online shopping for accessories, etc. is curated to make this experience even more convenient. Find the Best Online Shopping in Hyderabad only at Meanbuy.</p>
+
+<h6>BigBasket Let You choose At Your Convenience</h6>
+<p>What if you belong to the former kind, where you like to buy the product from the shop after analyzing it personally? But don't want to miss out on a fantastic product in the process? We got your back! At Meanbuy.com, you can freeze the product and pick up<br>
+     from your neighboring store without the worry of missing the product. Another additional feature of this website is, you can wait and save on the products you like.</p>
+       </div>
+    </main>
+
     
 </body>
 </html>
