--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-   
-        <ul  class="precontainer">
-            <li><i class="material-icons" style="font-size:17px">call</i>1800-660-8800</li>
-            <li> <i class="material-icons" style="font-size:17px">edit_location</i>
-                <select name="location" id="location">
-                <option value="Bangalore">Bangalore</option>
-                <option value="Mumbai">Mumbai</option>
-                <option value="Pune">Pune</option>
-                <option value="Delhi">Delhi</option>
-                </select>
-            </li>
-            <li><a href="login.html">login/ Sign up</a></li>
-        </ul>
+   <div id="login">
+    <ul  class="precontainer">
+        <li><i class="material-icons" style="font-size:17px">call</i>1800-660-8800</li>
+        <li> <i class="material-icons" style="font-size:17px">edit_location</i>
+            <select name="location" id="location">
+            <option value="Bangalore">Bangalore</option>
+            <option value="Mumbai">Mumbai</option>
+            <option value="Pune">Pune</option>
+            <option value="Delhi">Delhi</option>
+            </select>
+        </li>
+        <li><a href="login.html">login/ Sign up</a></li>
+    </ul>
+   </div>
+        
     </div>
     
     <div id="newnavbarContainer">
@@ -47,14 +49,14 @@
     <div class="cry">
         <img id="crauser" src="https://www.bigbasket.com/media/uploads/banner_images/hp_fom_m_bbpl-staples_460_180722_Bangalore.jpg" alt="first">
         <div id="btncrauser">
-            <button id="btn1"><h3>Offer on</h3><p>staples</p></button>
-            <button id="btn2"><h3>Fresho</h3><p>Meat</p></button>
-            <button id="btn3"><h3>Fresho</h3><p>Meat</p></button>
-            <button id="btn4"><h3>Mansoon</h3><p>Pakoda</p></button>
-            <button id="btn5"><h3>Cheese</h3><p>Store</p></button>
-            <button id="btn6"><h3>Best of</h3><p>Beauty</p></button>
-            <button id="btn7"><h3>Happy</h3><p>Chef</p></button>
-            <button id="btn8"><h3>Paneer</h3><p>Store</p></button>    
+            <div id="btn1"><h3>Offer on</h3><p>staples</p></div>
+            <div id="btn2"><h3>Fresho</h3><p>Meat</p></div>
+            <div id="btn3"><h3>Fresho</h3><p>Meat</p></div>
+            <div id="btn4"><h3>Mansoon</h3><p>Pakoda</p></div>
+            <div id="btn5"><h3>Cheese</h3><p>Store</p></div>
+            <div id="btn6"><h3>Best of</h3><p>Beauty</p></div>
+            <div id="btn7"><h3>Happy</h3><p>Chef</p></div>
+            <div id="btn8"><h3>Paneer</h3><p>Store</p></div>    
         </div>
     </div>
 
@@ -244,8 +246,8 @@
         <h1>Featured Recipes</h1>
         <hr>
         <img id="featuredcrauser" src="https://www.bigbasket.com/media/uploads/banner_images/all_hp_c_submit_cxnp-9687_400_200722.jpg" alt="">
-        <button id="leftbtn"><</button>
-        <button id="rightbtn">></button>
+        <div id="leftbtn"><button><</button></div>
+        <div id="rightbtn"><button>></button></div>
     </div>
 
     <div id="company-info" >
